# github-scrolling-message

./: .gitignore  README.md  message.txt  pyproject.toml
data/: message_encoded.npy  message_encoded.txt  message_pixellated.txt  message_raw.txt  message_record.txt
src/: char_to_pixel.py  client.py  encode.py
src/lambda_func/: client.py  constants.py  convertors.py  lambda_function.py
src/precalculation/: char_to_pixel.py  encode.py
tests/: conftest.py
tests/data/: test_encoded_message.txt  test_file.txt
tests/lambda_func/: conftest.py  test_client.py  test_lambda_func.py
tests/precalculation/: test_encode.py
