[tool.poetry]
name = "scrolling-message"
version = "0.1.0"
description = "Scrolling message on gitlab commit page"
authors = ["glyn-stevens <glynst@gmail.com>"]
readme = "README.md"
packages = [{include = "scrolling_message"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
