[tool.poetry]
name = "scrolling-message"
version = "0.1.0"
description = "Scrolling message on gitlab commit page"
authors = ["glyn-stevens <glynst@gmail.com>"]
readme = "README.md"
packages = [{include = "lambda_func", from = "src"}, {include = "precalculation", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.2.1"
pytest = "^8.0.2"

[tool.poetry.scripts]
encode = "src.precalculation.encode:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
